atualização do portfólio

--- a/paginas/cursoemvideo.html
+++ b/paginas/cursoemvideo.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Websites - Curso em Vídeo</h1>
         <p>
-            Todos os sites que foram desenvolvidos durante dois cursos online de HTML5/CSS3 e JavaScript/ECMAScript6 pela plataforma do 
+            Todos os sites que foram desenvolvidos durante dois cursos online de HTML5 & CSS3 e JavaScript & ECMAScript6 pela plataforma do 
             <a href="https://www.cursoemvideo.com" target="_blank">cursoemvideo.com</a> 
             com o professor Gustavo Guanabara.
         </p>
