--- a/paginas/flexboxgrid.html
+++ b/paginas/flexboxgrid.html
@@ -21,6 +21,13 @@
             <a href="https://www.youtube.com/@nodestudiotreinamentos" target="_blank">
                 @nodestudiotreinamentos</a>
         </p>
+        <p id="p3">
+            <a href="https://www.youtube.com/@dpwoficial" target="_blank">@dpw</a> 
+            (desenvolvimento para web) <br>
+            <a href="https://www.youtube.com/@Origamid" target="_blank">@Origamid</a> <br>
+            <a href="https://www.youtube.com/@nodestudiotreinamentos" target="_blank">
+                @nodestudiotreinamentos</a>
+        </p>
     </header>
     <main>
         <div>
