--- a/paginas/cursoemvideo.html
+++ b/paginas/cursoemvideo.html
@@ -74,7 +74,7 @@
             </div>
             <div class="site_descrição">
                 <h2>Site com iFrames</h2>
-                <h3>HTML / CSS</h3>
+                <h3>HTML / CSS / JS</h3>
                 <p>Curso de HTML5 & CSS3</p>
             </div>
         </div>
