--- a/index.html
+++ b/index.html
@@ -29,13 +29,25 @@
                 <strong>Formação:</strong> Ciências da Computação - UNICAP (2002) <br>
                 <strong>Experiência Profissional:</strong> 
                 Analista de Sistemas / Suporte Técnico em Infra <br>
-                <strong>Status:</strong> Transição de Carreira <br>
+                <strong>Status:</strong> Transição de Carreira 
+            </p> 
+            <p>
                 <strong>Cursos:</strong> 
-            </p>    
-            <ul>
-                <li>HTML5 & CSS3 / JavaScript pelo site do Curso em Vídeo;</li>
-                <li>CSS Flexbox e Grid Layout pelos canais do YouTube @dpw / @Origamid / @nodestudiotreinamentos.</li>
-            </ul>
+                <ul>
+                    <li>HTML5 & CSS3 / JavaScript pelo site do Curso em Vídeo;</li>
+                    <li>CSS Flexbox e Grid Layout pelos canais do YouTube @dpw / @Origamid / 
+                        @nodestudiotreinamentos.</li>
+                </ul>
+                <div>
+                    Ferramentas usadas durante os cursos: 
+                    <ul type="circle">
+                        <li>Sistema de controle de versão: Git 2.39</li>
+                        <li>Web Development IDE: Visual Studio Code 1.70</li>
+                        <li>Clientes Git GUI: Sourcetree 3.4 / Tortoise Git 2.16</li>
+                        <li>Repositório virtual: github.com</li>
+                    </ul>
+                </div>
+            </p>
             <p>
                 <strong>Objetivo Profissional:</strong> Tornar-se um desenvolvedor / programador  Front-end/Back-end; porém não tenho perfil para ser um web-designer completo. Desejo atuar com CSS com foco maior em Responsividade, além de HTML e JavaScript, estando aberto para adquirir novos conhecimentos, principalmente em ferramentas de Back-end. 
             </p>
