--- a/index.html
+++ b/index.html
@@ -89,16 +89,8 @@
     </aside>
     <footer>
         <div id="rodape1">
-            <div>
-                <p>&copy;2024 Desenvolvido por LHS DevWeb.</p>
-                <p>&nbsp</p>
-                <p>Todos os direitos reservados.</p>
-            </div>
-            <div>
-                <p>Fone: (81) 9.9258-9122</p>
-                <p>&nbsp/&nbsp</p>
-                <p>E-mail: 1bertorecife@gmail.com</p>
-            </div>
+            <p>&copy;2024 Desenvolvido por LHS DevWeb. Todos os direitos reservados.</p>
+            <p>Fone/WhatsApp: (81) 9.9258-9122 / E-mail: 1bertorecife@gmail.com</p>
         </div>
         <div id="rodape2">
             <p>&copy;2024 Desenvolvido por LHS DevWeb.</p>
