--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div id="rodape2">
             <p>&copy;2024 Desenvolvido por LHS DevWeb.</p>
             <p>Todos os direitos reservados.</p>
-            <p>Fone: (81) 9.9258-9122</p>
+            <p>Fone/WhatsApp: (81) 9.9258-9122</p>
             <p>E-mail: 1bertorecife@gmail.com</p>
         </div>
     </footer>
