--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
             </p>
             <p>
-                <strong>Objetivo Profissional:</strong> Tornar-se um desenvolvedor / programador  Front-end/Back-end; porém não tenho perfil para ser um web-designer completo. Desejo atuar com CSS com foco maior em Responsividade, além de HTML e JavaScript, estando aberto para adquirir novos conhecimentos, principalmente em ferramentas de Back-end. 
+                <strong>Objetivo Profissional:</strong> Tornar-se um desenvolvedor / programador  Front-end/Back-end; porém não tenho perfil para ser um web-designer completo. Desejo atuar com CSS com foco maior em Responsividade (RWD), além de HTML e JavaScript, estando aberto para adquirir novos conhecimentos, principalmente em ferramentas de Back-end. 
             </p>
         </section>
         <h2>Websites dos cursos realizados pela internet</h2>
